# PGGameServer

./: .env.example  .gitignore  CMakeLists.txt  admin_console.c  admin_console.h  admin_window.c  admin_window.h  coord_utils.c  coord_utils.h  db_client.c  db_client.h  env_loader.c  env_loader.h  game_protocol.h  game_state.h  main.c  net_protocol.c  net_protocol.h  network.c  network.h  player_connection.c  player_connection.h  run.sh  ship_shapes.c  ship_shapes.h  websocket.c  websocket.h
.external/: nuklear_raylib.c
UI/: admin_console.c  admin_console.h  admin_window.c  admin_window.h
client/: index.html  network.js
core/: game_state.h  includes.h  main.c
database/: db_client.c  db_client.h
database/network/: db_protocol.c  db_protocol.h
database/protocol/: db_protocol.h
docs/: client_protocol.md  input_examples.md  input_state_examples.md
network/: common_protocol.h  game_protocol.h  player_connection.c  player_connection.h  protocols.md  server_messages.h
network/tcpsockets/: tcp_protocol.h
network/websockets/: websocket.c  websocket.h  ws_protocol.h
physics/player/: player_physics.c  player_physics.h
physics/ship/: ship_shapes.h
